--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,52 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  align-content: space-around;
+  align-items: center;
+  width: 1100px;
+  height: 293px;
+}
+
+.header__links-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2px;
+  padding-left: 34px;
+  gap: 14px;
+  list-style: circle;
+}
+
+.header__links-list-item {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  padding-right: 20px;
+}
+
+.header__links-list-item.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header-logo-image {
+  display: block;
+  margin: auto;
+  width: 148px;
+  height: 105px;
+}
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  padding-left: 186px;
+  padding-top: 2px;
+}
+
+.address {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.35;
+  letter-spacing: 0.18px;
+}
