--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@
   list-style: none;
 }
 
-.header-logo-image {
+.header__logo-image {
   display: block;
   margin: auto;
   width: 148px;
@@ -50,3 +50,53 @@
   line-height: 1.35;
   letter-spacing: 0.18px;
 }
+
+.cover {
+  background-image: url(/images/cover.jpg);
+  height: 757px;
+  background-size: cover; 
+  background-repeat: no-repeat; 
+}
+
+.cover__title {
+  color: #fff;
+  font-family: Raleway, serif;
+  font-size: 100px;
+  text-transform: uppercase;
+  padding: 165px 50px 237px 50px;
+  position: relative;
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+  line-height: 1.38;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+  padding-bottom: px;
+}
+
+.letter-spacing-default {
+  letter-spacing: 6px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  position:absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
