--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@
   padding-left: 30px;
   gap: 8px;
   list-style: circle;
-  text-underline-offset: 4px;
   text-indent: 6px;
 }
 
@@ -26,6 +25,11 @@
 
 .header__links-list-item.header__links-list-item_no-bullit {
   list-style: none;
+}
+
+.header__links-list-item-underline {
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 .header__logo-image {
@@ -42,7 +46,6 @@
   justify-content: center;
   padding-left: 186px;
   padding-top: 2px;
-  text-underline-offset: 4px;
 }
 
 .address {
@@ -56,7 +59,7 @@
 .cover {
   position: relative;
   background-image: url(/images/cover.jpg);
-  height: 757px;
+  min-height: 757px;
   background-repeat: no-repeat; 
 }
 
@@ -68,7 +71,7 @@
   padding: 165px 50px 237px 50px;
   position: relative;
   letter-spacing: 30px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .aligned-text {
@@ -92,19 +95,15 @@
   letter-spacing: 0.6em;
 }
 
-
-/* Подумать как допилить overlay чтобы накидывать его только на картинки */
-
-/* .overlay {
+.overlay {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  position:absolute;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
-} */
-
+  z-index: 1;
+}
 
 .lots {
   padding: 179px 24px 0 24px;
@@ -123,12 +122,10 @@
   justify-content: space-between;
   flex-grow: 1;
   list-style: none;
+  padding-bottom: 30px;
 }
 
 .lots__card-list-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   position: relative;
   width: 334px;
   min-height: 563px;
@@ -138,6 +135,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+  min-height: 563px;
 }
 
 .card_type_film {
@@ -145,8 +144,21 @@
   background-position: 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 563px;
   
+}
+
+.card_type_book {
+  background: url(/images/card-lot-02.jpg);
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_picture {
+  background: url(/images/card-lot-03.jpg);
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .card__title {
@@ -157,6 +169,7 @@
   text-transform: uppercase;
   padding: 51px 40px 0 40px;
   text-decoration: underline;
+  z-index: 1;
 }
 
 .card__text {
@@ -164,6 +177,15 @@
   font-family: Raleway, sans-serif;
   font-size: 20px;
   line-height: 1.2;
+  padding: 0 40px 48px 40px;
+  position: relative;
+  z-index: 1;
 }
 
-
+.lots__look-more-link {
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  padding-left: 40px;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
