--- a/styles/style.css
+++ b/styles/style.css
@@ -29,13 +29,10 @@
 
 .header__links-list-item-underline {
   text-decoration: underline;
-  text-underline-offset: 4px;
+  text-underline-offset: 3px;
 }
 
 .header__logo-image {
-  display: block;
-  margin: auto;
-  width: 148px;
   height: 105px;
 }
 
@@ -60,7 +57,17 @@
   position: relative;
   background-image: url(/images/cover.jpg);
   min-height: 757px;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .cover__title {
@@ -84,7 +91,6 @@
 
 .aligned-text_right {
   text-align: right;
-  padding-bottom: px;
 }
 
 .letter-spacing-default {
@@ -93,16 +99,6 @@
 
 .letter-spacing-extended {
   letter-spacing: 0.6em;
-}
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
 }
 
 .lots {
@@ -144,7 +140,6 @@
   background-position: 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  
 }
 
 .card_type_book {
@@ -188,4 +183,64 @@
   padding-left: 40px;
   text-decoration: underline;
   text-underline-offset: 3px;
+}
+
+.about {
+  display: grid;
+  grid-template-rows: 563px;
+  grid-template-columns: 334px 1fr;
+  padding: 180px 24px 0 24px;
+}
+
+.about__logo {
+  background-color: black;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__title {
+  font-family: Raleway, sans-serif;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding: 101px 0px 76px 25px;
+}
+
+.about__text {
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  line-height: 1.2;
+  padding-top: 24px;
+  padding-left: 25px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.shorter-letter-spacing {
+  letter-spacing: 0.2px;
+}
+
+.short-letter-spacing {
+  letter-spacing: 0.4px;
+}
+
+.negative-letter-spacing {
+  letter-spacing: -0.2px;
+}
+
+.medium-letter-spacing {
+  letter-spacing: 0.6px;
+}
+
+.higher-letter-spacing {
+  letter-spacing: 0.8px;
 }
