--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,11 @@
   padding-right: 20px;
 }
 
-.header__links-list-item.header__links-list-item_no-bullit {
+.list-item_no-bullit {
   list-style: none;
 }
 
-.header__links-list-item-underline {
+.list-item-underline {
   text-decoration: underline;
   text-underline-offset: 3px;
 }
@@ -78,7 +78,7 @@
   padding: 165px 50px 237px 50px;
   position: relative;
   letter-spacing: 30px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .aligned-text {
@@ -117,7 +117,6 @@
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
-  list-style: none;
   padding-bottom: 30px;
 }
 
@@ -243,4 +242,41 @@
 
 .higher-letter-spacing {
   letter-spacing: 0.8px;
+}
+
+.footer {
+  display: grid;
+  padding-top: 178px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100px;
+  margin-bottom: 85px;
+}
+
+.footer__address {
+  display: flex;
+  flex-direction: column;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  padding-top: 2px;
+  padding-left: 50px;
+}
+
+.footer__menu-list {
+  padding-top: 1px;
+}
+
+.footer__menu-list-item {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+}
+
+.footer__social-list {
+  display: flex;
+  padding-left: 77px;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
