--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,32 @@
 .header {
   display: grid;
   grid-template-columns: 1fr 148px 1fr;
-  align-content: space-around;
   align-items: center;
   height: 293px;
 }
 
 .header__links-list {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  gap: 8px;
   padding-top: 2px;
   padding-left: 30px;
-  gap: 8px;
-  list-style: circle;
   text-indent: 6px;
+  list-style: circle;
 }
 
 .header__links-list-item {
+  padding-right: 20px;
   font-family: Raleway, sans-serif;
   font-size: 18px;
-  padding-right: 20px;
 }
 
 .list-item_no-bullit {
   list-style: none;
 }
 
-.list-item-underline {
+.link-underline {
   text-decoration: underline;
   text-underline-offset: 3px;
 }
@@ -39,46 +38,44 @@
 .header__address {
   display: flex;
   flex-direction: column;
-  align-content: center;
   justify-content: center;
-  padding-left: 186px;
+  align-content: center;
   padding-top: 2px;
+  padding-left: 186px;
 }
 
 .address {
   font-family: Raleway, sans-serif;
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: 1.35;
   letter-spacing: 0.18px;
 }
 
 .cover {
   position: relative;
-  background-image: url(/images/cover.jpg);
   min-height: 757px;
+  background-image: url(/images/cover.jpg);
   background-repeat: no-repeat;
 }
 
 .overlay {
+  position: absolute;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
 }
 
 .cover__title {
+  position: relative;
+  z-index: 2;
+  padding: 165px 50px 237px 50px;
   color: #fff;
   font-family: Raleway, serif;
   font-size: 100px;
-  text-transform: uppercase;
-  padding: 165px 50px 237px 50px;
-  position: relative;
   letter-spacing: 30px;
-  z-index: 2;
+  text-transform: uppercase;
 }
 
 .aligned-text {
@@ -106,17 +103,17 @@
 }
 
 .lots__heading {
+  padding-bottom: 27px;
+  padding-left: 40px;
   font-family: Raleway, sans-serif;
   font-size: 40px;
   text-transform: uppercase;
-  padding-left: 40px;
-  padding-bottom: 27px;
 }
 
 .lots__card-list {
   display: flex;
-  justify-content: space-between;
   flex-grow: 1;
+  justify-content: space-between;
   padding-bottom: 30px;
 }
 
@@ -127,78 +124,78 @@
 }
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
   min-height: 563px;
 }
 
 .card_type_film {
   background: url(/images/card-lot-01.jpg);
+  background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card_type_book {
   background: url(/images/card-lot-02.jpg);
+  background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card_type_picture {
   background: url(/images/card-lot-03.jpg);
+  background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card__title {
+  z-index: 1;
+  padding: 51px 40px 0 40px;
   color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   line-height: 1.2;
-  text-transform: uppercase;
-  padding: 51px 40px 0 40px;
   text-decoration: underline;
-  z-index: 1;
+  text-transform: uppercase;
 }
 
 .card__text {
+  position: relative;
+  z-index: 1;
+  padding: 0 40px 48px 40px;
   color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   line-height: 1.2;
-  padding: 0 40px 48px 40px;
-  position: relative;
-  z-index: 1;
 }
 
 .lots__look-more-link {
+  padding-left: 40px;
   font-family: Raleway, sans-serif;
   font-size: 20px;
-  padding-left: 40px;
   text-decoration: underline;
   text-underline-offset: 3px;
 }
 
 .about {
   display: grid;
-  grid-template-rows: 563px;
   grid-template-columns: 334px 1fr;
+  grid-template-rows: 563px;
   padding: 180px 24px 0 24px;
 }
 
 .about__logo {
-  background-color: black;
-  width: 240px;
-  height: 240px;
-  border-radius: 50%;
   display: flex;
   justify-content: center;
+  width: 240px;
+  height: 240px;
   margin: 0 auto;
+  border-radius: 50%;
+  background-color: black;
 }
 
 .about__logo-image {
@@ -206,18 +203,18 @@
 }
 
 .about__title {
+  padding: 101px 0px 76px 25px;
   font-family: Raleway, sans-serif;
   font-size: 40px;
   text-transform: uppercase;
-  padding: 101px 0px 76px 25px;
 }
 
 .about__text {
+  padding-top: 24px;
+  padding-left: 25px;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   line-height: 1.2;
-  padding-top: 24px;
-  padding-left: 25px;
 }
 
 .no-letter-spacing {
@@ -246,19 +243,19 @@
 
 .footer {
   display: grid;
-  padding-top: 178px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 100px;
   margin-bottom: 85px;
+  padding-top: 178px;
 }
 
 .footer__address {
   display: flex;
   flex-direction: column;
-  font-family: Raleway, sans-serif;
-  font-size: 18px;
   padding-top: 2px;
   padding-left: 50px;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
 }
 
 .footer__menu-list {
@@ -272,8 +269,8 @@
 
 .footer__social-list {
   display: flex;
-  padding-left: 77px;
   gap: 48px;
+  padding-left: 77px;
 }
 
 .footer__social-icon {
