--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
 .cover {
   position: relative;
   min-height: 757px;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
 }
 
@@ -132,21 +132,21 @@
 }
 
 .card_type_film {
-  background: url(/images/card-lot-01.jpg);
+  background: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
 }
 
 .card_type_book {
-  background: url(/images/card-lot-02.jpg);
+  background: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
 }
 
 .card_type_picture {
-  background: url(/images/card-lot-03.jpg);
+  background: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
