--- a/styles/style.css
+++ b/styles/style.css
@@ -137,7 +137,7 @@
   font-size: 22px;
   text-align: center;
   text-transform: uppercase;
-  background: transparent;
+  background:transparent;
 }
 
 .lots {
@@ -174,21 +174,21 @@
 }
 
 .card_type_film {
-  background: url(../images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
 }
 
 .card_type_book {
-  background: url(../images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
 }
 
 .card_type_picture {
-  background: url(../images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
