--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 148px 1fr;
   align-items: center;
-  height: 293px;
+  margin-top: 92px;
+  margin-bottom: 92px;
 }
 
 .header__links-list {
@@ -10,8 +11,7 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-  padding-top: 2px;
-  padding-left: 30px;
+  padding-left: 32px;
   text-indent: 2px;
   list-style: circle;
 }
@@ -38,9 +38,6 @@
 .header__address {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  padding-top: 2px;
   padding-left: 186px;
 }
 
@@ -57,10 +54,14 @@
   min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -70,7 +71,7 @@
 .cover__title {
   position: relative;
   z-index: 2;
-  padding: 164px 50px 237px 50px;
+  padding: 164px 50px 127px 50px;
   color: #fff;
   font-family: Raleway, serif;
   font-size: 100px;
@@ -114,12 +115,11 @@
   z-index: 2;
   display: flex;
   align-items: center;
-  margin-top: -110px;
+  color: #fff;
 }
 
 .cover__description-text {
   padding-left: 78px;
-  color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   text-transform: uppercase;
@@ -132,12 +132,12 @@
   margin-left: 76px;
   border-width: 1px;
   border-color: #fff;
-  color: #fff;
+  color: currentColor;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   text-align: center;
   text-transform: uppercase;
-  background:transparent;
+  background: transparent;
 }
 
 .lots {
@@ -171,27 +171,21 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 563px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: cover;
 }
 
 .card__title {
@@ -226,7 +220,6 @@
 .about {
   display: grid;
   grid-template-columns: 334px 1fr;
-  grid-template-rows: 563px;
   padding: 180px 24px 0 24px;
 }
 
@@ -245,33 +238,35 @@
 }
 
 .about__title {
-  padding: 101px 0px 76px 25px;
+  padding: 101px 0px 100px 25px;
   font-family: Raleway, sans-serif;
   font-size: 40px;
   text-transform: uppercase;
 }
 
 .about__text {
-  padding-top: 24px;
+  padding-bottom: 24px;
   padding-left: 25px;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   line-height: 1.2;
 }
 
+.about__text:last-child {
+  padding-bottom: 0;
+}
+
 .footer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 100px;
+  grid-template-columns: 1fr 151px 1fr;
   margin-bottom: 85px;
-  padding-top: 178px;
+  padding: 181px 50px 0 50px;
 }
 
 .footer__address {
   display: flex;
   flex-direction: column;
   padding-top: 2px;
-  padding-left: 50px;
   font-family: Raleway, sans-serif;
   font-size: 18px;
 }
@@ -287,8 +282,8 @@
 
 .footer__social-list {
   display: flex;
+  justify-content: flex-end;
   gap: 48px;
-  padding-left: 77px;
 }
 
 .footer__social-icon {
